# B2B-Ads-Quality-Rater

./: .gitattributes  .gitignore  GITHUB_READY_CHECKLIST.md  IMPLEMENTATION_STATUS.md  PLANNING.md  PRD.md  QUICKSTART.md  README.md  SECURITY_GITHUB_SETUP.md
backend/: .env.example  README.md  pyproject.toml  requirements.txt  setup.sh
backend/config/brand_guidelines/: example_brand.json
backend/src/agents/: ad_visual_analyst.py  brand_consistency_agent.py  copywriting_expert.py  landing_page_scraper.py  quality_rating_synthesizer.py
backend/src/api/: main.py
backend/src/config/: settings.py
backend/src/crew/: crew.py
backend/src/models/: ad_quality_report.py  brand_compliance.py  copywriting_feedback.py  visual_analysis.py
backend/src/tools/: gemini_vision_tool.py  playwright_scraping_tool.py  trafilatura_parser_tool.py
backend/src/utils/: llm_config.py  logger.py
backend/tests/unit/: test_api.py  test_models.py
frontend/: README.md  package-lock.json  package.json  start.sh  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AgentThinking.tsx  AnalysisForm.tsx  ChatInput.tsx  ChatInterface.tsx  ChatMessage.tsx  ReportDisplay.tsx  ResultsView.tsx
frontend/components/tabs/: BrandComplianceTab.tsx  CopywritingTab.tsx  VisualTab.tsx
frontend/components/ui/: button.tsx  card.tsx  file-upload.tsx  input.tsx  tabs.tsx  textarea.tsx
frontend/lib/: api.ts  types.ts  utils.ts
